[package]
name = "adjei_sampling"
version = "0.1.0"
authors = ["Fletch <tfletcher@certicasolutions.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
statrs = "0.12"
statistical = "1.0.0"
clap = "2.33"
csv = "1.1"
serde = { version = "1.0", features=["derive"] }
rand = "0.6"